<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LogicCalcv2</string>
    <string name="action_settings">Settings</string>
    <string name="hint_example_answer">T T F T</string>
    <string name="hint_example_equation">!A|(B&amp;F)</string>
    <string name="operand_not">!</string>
    <string name="operand_and">&amp;</string>
    <string name="operand_or">|</string>
    <string name="operand_xor">^</string>
    <string name="operand_equal">=</string>
    <string name="constant_true">T</string>
    <string name="constant_false">F</string>
    <string name="variable_a">A</string>
    <string name="variable_b">B</string>
    <string name="variable_c">C</string>
    <string name="variable_d">D</string>
    <string name="variable_e">E</string>
    <string name="del_button">Bksp</string>
    <string name="operand_leftparen">(</string>
    <string name="operand_rightparen">)</string>
    <string name="switch_ui">Switch UI</string>
    <string name="switch_ui_button">changeUI</string>
    <string name="button_insert">insertOnClick</string>

</resources>