<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TestingActicity" >

    <EditText
        android:id="@+id/inputText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/hint_example_equation"
        android:textIsSelectable="true"
        android:typeface="monospace" />

    <Button
        android:id="@+id/button_and2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/inputText"
        android:layout_below="@+id/inputText"
        android:layout_marginTop="34dp"
        android:text="@string/operand_not" />

    <Button
        android:id="@+id/button_xor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_or"
        android:layout_below="@+id/button_or"
        android:text="@string/operand_or" />

    <Button
        android:id="@+id/button_equal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_xor"
        android:layout_below="@+id/button_xor"
        android:text="@string/operand_xor" />

    <Button
        android:id="@+id/button_not"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_equal"
        android:layout_below="@+id/button_equal"
        android:text="@string/operand_equal" />

    <Button
        android:id="@+id/button_true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_false"
        android:layout_centerHorizontal="true"
        android:text="@string/constant_true" />

    <Button
        android:id="@+id/button_false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_true"
        android:layout_centerVertical="true"
        android:text="@string/constant_false" />

    <Button
        android:id="@+id/button_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_and2"
        android:layout_alignBottom="@+id/button_and2"
        android:layout_alignRight="@+id/inputText"
        android:text="@string/variable_a" />

    <Button
        android:id="@+id/button_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_or"
        android:layout_alignBottom="@+id/button_or"
        android:layout_alignRight="@+id/button_a"
        android:text="@string/variable_b" />

    <Button
        android:id="@+id/button_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_xor"
        android:layout_alignBottom="@+id/button_xor"
        android:layout_alignRight="@+id/button_b"
        android:text="@string/variable_c" />

    <Button
        android:id="@+id/button_lparen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_equal"
        android:layout_alignBottom="@+id/button_equal"
        android:layout_alignRight="@+id/button_c"
        android:text="@string/variable_d" />

    <Button
        android:id="@+id/button_e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_not"
        android:layout_alignBottom="@+id/button_not"
        android:layout_alignRight="@+id/button_lparen"
        android:text="@string/variable_e" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/inputText"
        android:layout_below="@+id/inputText"
        android:hint="@string/hint_example_answer"
        android:textAppearance="?android:attr/textAppearanceMediumInverse"
        android:textIsSelectable="true"
        android:typeface="monospace" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputText"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button_d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_false"
        android:layout_alignTop="@+id/button_not"
        android:text="@string/del_button" />

    <Button
        android:id="@+id/button_del"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_rparen"
        android:layout_alignBottom="@+id/button_rparen"
        android:layout_toRightOf="@+id/button_rparen"
        android:text="@string/operand_rightparen" />

    <Button
        android:id="@+id/button_rparen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_not"
        android:layout_below="@+id/button_not"
        android:layout_marginTop="14dp"
        android:text="@string/operand_leftparen" />

    <Button
        android:id="@+id/button_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_and2"
        android:layout_below="@+id/button_and2"
        android:text="@string/operand_and" />

</RelativeLayout>