<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TestingActicity" >

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/inputText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_example_equation"
            android:textIsSelectable="true"
            android:typeface="monospace"
            android:layout_gravity="center"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/outputText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/inputText"
            android:layout_below="@+id/inputText"
            android:hint="@string/hint_example_answer"
            android:textAppearance="?android:attr/textAppearanceMediumInverse"
            android:textIsSelectable="true"
            android:typeface="monospace"
            android:layout_gravity="center"
            android:clickable="true"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/inputText"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" >

        <Button
            android:id="@+id/button_lparen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@string/button_insert"
            android:text="@string/operand_leftparen" />

        <Button
            android:id="@+id/button_rparen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@string/button_insert"
            android:text="@string/operand_rightparen" />

        <Button
            android:id="@+id/button_del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:onClick="@string/button_insert"
            android:text="@string/del_button" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@string/button_insert"
            android:text="@string/variable_a" />

        <Button
            android:id="@+id/button_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@string/button_insert"
            android:text="@string/variable_b" />

        <Button
            android:id="@+id/button_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@string/button_insert"
            android:text="@string/variable_c" />

        <Button
            android:id="@+id/button_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@string/button_insert"
            android:text="@string/variable_d" />

        <Button
            android:id="@+id/button_e"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@string/button_insert"
            android:text="@string/variable_e" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button_true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@string/button_insert"
            android:text="@string/constant_true" />

        <Button
            android:id="@+id/button_false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@string/button_insert"
            android:text="@string/constant_false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button_not"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@string/button_insert"
            android:text="@string/operand_not" />

        <Button
            android:id="@+id/button_and"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@string/button_insert"
            android:text="@string/operand_and" />

        <Button
            android:id="@+id/button_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@string/button_insert"
            android:text="@string/operand_or" />

        <Button
            android:id="@+id/button_xor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@string/button_insert"
            android:text="@string/operand_xor" />

        <Button
            android:id="@+id/button_equal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@string/button_insert"
            android:text="@string/operand_equal" />
    </LinearLayout>

</RelativeLayout>