<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="fill_vertical|center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TestingActicity"
    android:orientation="vertical">

	    <EditText
	        android:id="@+id/inputText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/hint_example_equation"
	        android:textIsSelectable="true"
	        android:typeface="monospace"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

	    <TextView
	        android:id="@+id/outputText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:hint="@string/hint_example_answer"
            android:textIsSelectable="true"
	        android:typeface="monospace"
            android:layout_row="1"
            android:layout_column="0"
            android:textSize="23dp"
            android:textStyle="bold"
            android:onClick="outputClicked"
            android:layout_alignParentStart="false"
            android:layout_alignParentEnd="false"
            android:gravity="center"
            android:layout_below="@+id/inputText" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignTop="@+id/operandLayout"
        android:layout_toLeftOf="@+id/operandLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/stepsText" />

    </RelativeLayout>

    <RelativeLayout
	        android:id="@+id/operandLayout"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_gravity="right"
        android:paddingTop="5dp"
        android:layout_below="@+id/outputText"
        android:layout_alignRight="@+id/tfLayout">

            <Button
	            android:id="@+id/button_or"
	            style="android:buttonStyle"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:onClick="@string/button_insert"
	            android:text="@string/operand_or"
                android:layout_row="1"
                android:layout_column="2"
                android:layout_below="@+id/button_not"
                android:layout_toRightOf="@+id/button_and" />

            <Button
                android:id="@+id/button_not"
                style="android:buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@string/button_insert"
                android:text="@string/operand_not"
                android:layout_row="0"
                android:layout_column="2"
                android:layout_alignTop="@+id/button_equal"
                android:layout_toRightOf="@+id/button_equal" />

            <Button
	            android:id="@+id/button_and"
	            style="android:buttonStyle"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:onClick="@string/button_insert"
	            android:text="@string/operand_and"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_below="@+id/button_not"
                android:layout_toRightOf="@+id/button_xor" />

            <Button
	            android:id="@+id/button_xor"
	            style="android:buttonStyle"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:onClick="@string/button_insert"
	            android:text="@string/operand_xor"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true" />

	        <Button
	            android:id="@+id/button_equal"
	            style="android:buttonStyle"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:onClick="@string/button_insert"
	            android:text="@string/operand_equal"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_alignTop="@+id/button_xor"
                android:layout_toRightOf="@+id/button_xor" />

	    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/tfLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
android:layout_row="3"
android:layout_column="0"
android:layout_gravity="right"
        android:paddingTop="5dp"
        android:layout_below="@+id/operandLayout"
        android:layout_alignParentRight="true">

        <Button
            android:id="@+id/button_true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@string/button_insert"
            android:text="@string/constant_true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" />

        <Button
            android:id="@+id/button_false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@string/button_insert"
            android:text="@string/constant_false"
            android:layout_alignTop="@+id/button_true"
            android:layout_toRightOf="@+id/button_true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:orientation="vertical"
        android:layout_gravity="right"
        android:paddingTop="5dp"
        android:id="@+id/variablesLayout"
        android:layout_below="@+id/tfLayout"
        android:layout_alignParentRight="true">

        <Button
            android:id="@+id/button_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@string/button_insert"
            android:text="@string/variable_a"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" />

        <Button
            android:id="@+id/button_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@string/button_insert"
            android:text="@string/variable_b"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_alignTop="@+id/button_a"
            android:layout_toRightOf="@+id/button_a" />

        <Button
            android:id="@+id/button_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@string/button_insert"
            android:text="@string/variable_c"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_below="@+id/button_a"
            android:layout_alignParentLeft="true" />

        <Button
            android:id="@+id/button_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@string/button_insert"
            android:text="@string/variable_d"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_below="@+id/button_a"
            android:layout_toRightOf="@+id/button_c" />

    </RelativeLayout>

    <RelativeLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_gravity="right"
        android:paddingTop="5dp"
        android:id="@+id/parensLayout"
        android:layout_below="@+id/variablesLayout"
        android:layout_alignParentRight="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="solv"
            android:id="@+id/button_solv"
            android:onClick="@string/button_insert"
            android:layout_row="0"
            android:layout_column="0"
            android:clickable="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true" />

        <Button
            android:id="@+id/button_del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@string/button_insert"
            android:text="@string/del_button"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_alignTop="@+id/button_solv"
            android:layout_toRightOf="@+id/button_solv" />

        <Button
	            android:id="@+id/button_lparen"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:onClick="@string/button_insert"
	            android:text="@string/operand_leftparen"
                android:layout_row="0"
                android:layout_column="4"
            android:layout_alignTop="@+id/button_del"
            android:layout_toRightOf="@+id/button_del" />

        <Button
	            android:id="@+id/button_rparen"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:onClick="@string/button_insert"
	            android:text="@string/operand_rightparen"
            android:layout_row="0"
            android:layout_column="25"
            android:layout_alignTop="@+id/button_lparen"
            android:layout_toRightOf="@+id/button_lparen" />

    </RelativeLayout>

</RelativeLayout>